--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -522,7 +522,7 @@
 
       <div class="hero-image-container">
         <img
-          src="{{ url_for('static', path='/profile.jpg') }}"
+          src="{{ url_for('static', path='/vamsimyla.jpg') }}"
           alt="Vamsi Myla"
           class="profile-pic"
           onerror="this.src='https://via.placeholder.com/400/3b82f6/ffffff?text=Vamsi+Myla'"
